chore(upgrade): re-add trailing /auth

--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -134,7 +134,8 @@ frontend:
       #   cpu: 100m
       #   memory: 128Mi
     path: "/assets"
-  bpdmPartnersPoolApiPath: "/api"
+  centralidpAuthPath: "/auth"
+  bpdmPartnersPoolApiPath: "/pool/api"
 
 backend:
   ingress:
