fix: update n2n initial roles
Refs: CPLP-3197

--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -228,9 +228,9 @@ spec:
                   name: "{{ .Values.backend.mailing.secret }}"
                   key: "password"
             - name: "NETWORKREGISTRATION__INITIALROLES__0__CLIENTID"
-              value: "{{ .Values.backend.clients.portal }}"
+              value: "{{ .Values.backend.clients.registration }}"
             - name: "NETWORKREGISTRATION__INITIALROLES__0__USERROLENAMES__0"
-              value: "{{ .Values.backend.processesworker.networkRegistration.initialRoles.role0 }}"
+              value: "{{ .Values.backend.provisioning.invitedUserInitialRoles.registration }}"
             - name: "MAILINGSERVICE__MAIL__SMTPPORT"
               value: "{{ .Values.backend.mailing.port }}"
             - name: "MAILINGSERVICE__MAIL__SMTPUSER"
@@ -245,6 +245,7 @@ spec:
               value: "{{ .Values.backend.provisioning.centralRealmId }}"
             - name: "PROVISIONING__INVITEDUSERINITIALROLES__0__CLIENTID"
               value: "{{ .Values.backend.clients.registration }}"
+            # -- if the array is extended please extend NETWORKREGISTRATION__INITIALROLES as well
             - name: "PROVISIONING__INVITEDUSERINITIALROLES__0__USERROLENAMES__0"
               value: "{{ .Values.backend.provisioning.invitedUserInitialRoles.registration }}"
             - name: "PROVISIONING__SHAREDREALM__SMTPSERVER__AUTH"
