--- a/charts/portal/templates/deployment-backend-administration.yaml
+++ b/charts/portal/templates/deployment-backend-administration.yaml
@@ -290,9 +290,9 @@ spec:
         - name: "MAILINGSERVICE__MAIL__SMTPUSER"
           value: "{{ .Values.backend.mailing.user }}"
         - name: "NETWORK2NETWORK__INITIALROLES__0__CLIENTID"
-          value: "{{ .Values.backend.clients.portal }}"
+          value: "{{ .Values.backend.clients.registration }}"
         - name: "NETWORK2NETWORK__INITIALROLES__0__USERROLENAMES__0"
-          value: "{{ .Values.backend.administration.network2network.initialRoles.role0 }}"
+          value: "{{ .Values.backend.provisioning.invitedUserInitialRoles.registration }}"
         - name: "NETWORK2NETWORK__BASEPORTALADDRESS"
           value: "{{ .Values.portalAddress }}{{ .Values.backend.portalHomePath }}"
         - name: "ONBOARDINGSERVICEPROVIDER__ENCYRPTIONKEY"
@@ -308,6 +308,7 @@ spec:
           value: "{{ .Values.backend.provisioning.centralRealmId }}"
         - name: "PROVISIONING__INVITEDUSERINITIALROLES__0__CLIENTID"
           value: "{{ .Values.backend.clients.registration }}"
+        # -- if the array is extended please extend NETWORK2NETWORK__INITIALROLES as well
         - name: "PROVISIONING__INVITEDUSERINITIALROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.provisioning.invitedUserInitialRoles.registration }}"
         - name: "PROVISIONING__SHAREDREALM__SMTPSERVER__AUTH"
