fix(secrets): move quotes for escaping

--- a/charts/portal/templates/secret-backend-postgres-init.yaml
+++ b/charts/portal/templates/secret-backend-postgres-init.yaml
@@ -31,10 +31,10 @@ data:
   # if secret exists, use value provided from values file (to cover update scenario) or existing value from secret
   # use data map instead of stringData to prevent base64 encoding of already base64-encoded existing value from secret
   # use index function for secret keys with hyphen otherwise '$secret.data.secretKey' works too
-  postgres-password: {{ ( .Values.postgresql.auth.password | b64enc )  | default ( index $secret.data "postgres-password" ) }}
-  replication-password: {{ ( .Values.postgresql.auth.replicationPassword | b64enc )  | default ( index $secret.data "replication-password" ) }}
-  portal-password: {{ ( .Values.postgresql.auth.portalPassword | b64enc ) | default ( index $secret.data "portal-password" ) }}
-  provisioning-password: {{ ( .Values.postgresql.auth.provisioningPassword | b64enc ) | default ( index $secret.data "provisioning-password" ) }}
+  postgres-password: {{ ( .Values.postgresql.auth.password | b64enc )  | default ( index $secret.data "postgres-password" ) | quote }}
+  replication-password: {{ ( .Values.postgresql.auth.replicationPassword | b64enc )  | default ( index $secret.data "replication-password" ) | quote }}
+  portal-password: {{ ( .Values.postgresql.auth.portalPassword | b64enc ) | default ( index $secret.data "portal-password" ) | quote }}
+  provisioning-password: {{ ( .Values.postgresql.auth.provisioningPassword | b64enc ) | default ( index $secret.data "provisioning-password" ) | quote }}
 {{ else -}}
 stringData:
   # if secret doesn't exist, use provided value from values file or generate a random one
