--- a/charts/portal/templates/secret-backend-external-db.yaml
+++ b/charts/portal/templates/secret-backend-external-db.yaml
@@ -31,8 +31,8 @@ data:
   # if secret exists, use value provided from values file (to cover update scenario) or existing value from secret
   # use data map instead of stringData to prevent base64 encoding of already base64-encoded existing value from secret
   # use index function for secret keys with hyphen otherwise '$secret.data.secretKey' works too
-  portal-password: {{ ( .Values.externalDatabase.portalPassword | b64enc | quote ) | default ( index $secret.data "portal-password" ) }}
-  provisioning-password: {{ ( .Values.externalDatabase.provisioningPassword | b64enc | quote ) | default ( index $secret.data "provisioning-password" ) }}
+  portal-password: {{ ( .Values.externalDatabase.portalPassword | b64enc ) | default ( index $secret.data "portal-password" ) | quote }}
+  provisioning-password: {{ ( .Values.externalDatabase.provisioningPassword | b64enc ) | default ( index $secret.data "provisioning-password" ) | quote }}
 {{ else -}}
 stringData:
   # if secret doesn't exist, use provided value from values file or generate a random one
