--- a/charts/portal/templates/secret-backend-mailing.yaml
+++ b/charts/portal/templates/secret-backend-mailing.yaml
@@ -30,8 +30,8 @@ data:
   # if secret exists, use value provided from values file (to cover update scenario) or existing value from secret
   # use data map instead of stringData to prevent base64 encoding of already base64-encoded existing value from secret
   # use index function for secret keys with hyphen otherwise '$secret.data.secretKey' works too
-  password: {{ ( .Values.backend.mailing.password | b64enc | quote ) | default $secret.data.password }}
-  provisioning-sharedrealm-password: {{ ( .Values.backend.provisioning.sharedRealm.smtpServer.password | b64enc | quote ) | default ( index $secret.data "provisioning-sharedrealm-password" ) }}
+  password: {{ ( .Values.backend.mailing.password | b64enc ) | default $secret.data.password | quote }}
+  provisioning-sharedrealm-password: {{ ( .Values.backend.provisioning.sharedRealm.smtpServer.password | b64enc ) | default ( index $secret.data "provisioning-sharedrealm-password" ) | quote }}
 {{ else -}}
 stringData:
   # if secret doesn't exist, use provided value from values file or generate a random one
