--- a/charts/localdev/Chart.yaml
+++ b/charts/localdev/Chart.yaml
@@ -48,5 +48,6 @@ dependencies:
     version: 1.17.x
   - condition: postgresql.enabled
     name: postgresql
+    alias: postgresportal
     repository: https://charts.bitnami.com/bitnami
-    version: 11.9.13
+    version: 12.12.x
