--- a/charts/localdev/templates/configmap-backend-postgres-init.yaml
+++ b/charts/localdev/templates/configmap-backend-postgres-init.yaml
@@ -17,11 +17,11 @@
 * SPDX-License-Identifier: Apache-2.0
 */}}
 
-{{- if .Values.postgresql.enabled -}}
+{{- if .Values.postgresportal.enabled -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Values.postgresql.primary.initdb.scriptsConfigMap }}
+  name: {{ .Values.postgresportal.primary.initdb.scriptsConfigMap }}
   namespace: {{ .Release.Namespace }}
 data:
   01-init-db-user.sh: |
