--- a/.github/workflows/localdev-chart-test.yaml
+++ b/.github/workflows/localdev-chart-test.yaml
@@ -55,6 +55,8 @@ jobs:
         with:
           version: v0.19.0
           node_image: ${{ github.event.inputs.node_image || 'kindest/node:v1.26.6' }}
+          cpu: 2
+          memory: 8
 
       - name: Set up Helm
         uses: azure/setup-helm@v3
@@ -138,7 +140,7 @@ jobs:
           helm repo add tractusx-dev https://eclipse-tractusx.github.io/charts/dev
           helm repo add bitnami https://charts.bitnami.com/bitnami
           helm repo add pgadmin4 https://helm.runix.net
-          helm install local charts/localdev --timeout 10m
+          helm install local charts/localdev --timeout 20m
         if: github.event_name != 'pull_request' || steps.list-changed.outputs.changed == 'true'
 
       #   # Upgrade the released localdev chart version with the locally available chart
