feat(locadev): add postgres for backend dev (#102)
- add postgres for backend dev
- update docs for install into localdev namespace
- increase timeout for chart testing install

--- a/.github/workflows/localdev-chart-test.yaml
+++ b/.github/workflows/localdev-chart-test.yaml
@@ -136,8 +136,9 @@ jobs:
       - name: Run helm install
         run: |
           helm repo add tractusx-dev https://eclipse-tractusx.github.io/charts/dev
+          helm repo add bitnami https://charts.bitnami.com/bitnami
           helm repo add pgadmin4 https://helm.runix.net
-          helm install local charts/localdev
+          helm install local charts/localdev --timeout 20m
         if: github.event_name != 'pull_request' || steps.list-changed.outputs.changed == 'true'
 
       #   # Upgrade the released localdev chart version with the locally available chart
