--- a/charts/portal/Chart.yaml
+++ b/charts/portal/Chart.yaml
@@ -20,8 +20,8 @@
 apiVersion: v2
 name: portal
 type: application
-version: 1.6.0
-appVersion: 1.6.0
+version: 1.7.0-alpha
+appVersion: 1.7.0-alpha
 description: Helm chart for Catena-X Portal
 home: https://github.com/eclipse-tractusx/portal-cd
 sources:
