--- a/consortia/argocd-app-templates/appsetup-int.yaml
+++ b/consortia/argocd-app-templates/appsetup-int.yaml
@@ -28,7 +28,7 @@ spec:
   source:
     path: charts/portal
     repoURL: 'https://github.com/eclipse-tractusx/portal-cd.git'
-    targetRevision: portal-1.6.0
+    targetRevision: portal-1.7.0-alpha
     plugin:
       env:
         - name: AVP_SECRET
