feat(apps) : added activeDocumentTypeIds (#89)
Ref: CPLP-3087

--- a/charts/portal/templates/deployment-backend-appmarketplace.yaml
+++ b/charts/portal/templates/deployment-backend-appmarketplace.yaml
@@ -168,6 +168,14 @@ spec:
           value: "{{ .Values.backend.appmarketplace.submitAppDocumentTypeIds.type1 }}"
         - name: "APPMARKETPLACE__SUBMITAPPDOCUMENTTYPEIDS__2"
           value: "{{ .Values.backend.appmarketplace.submitAppDocumentTypeIds.type2 }}"
+        - name: "APPMARKETPLACE__ACTIVEAPPDOCUMENTTYPEIDS__0"
+          value: "{{ .Values.backend.appmarketplace.activeAppDocumentTypeIds.type0 }}"
+        - name: "APPMARKETPLACE__ACTIVEAPPDOCUMENTTYPEIDS__1"
+          value: "{{ .Values.backend.appmarketplace.activeAppDocumentTypeIds.type1 }}"
+        - name: "APPMARKETPLACE__ACTIVEAPPDOCUMENTTYPEIDS__2"
+          value: "{{ .Values.backend.appmarketplace.activeAppDocumentTypeIds.type2 }}"
+        - name: "APPMARKETPLACE__ACTIVEAPPDOCUMENTTYPEIDS__3"
+          value: "{{ .Values.backend.appmarketplace.activeAppDocumentTypeIds.type3 }}"
         - name: "APPMARKETPLACE__ITADMINROLES__0__CLIENTID"
           value: "{{ .Values.backend.clients.portal }}"
         - name: "APPMARKETPLACE__ITADMINROLES__0__USERROLENAMES__0"
