--- a/charts/portal/Chart.yaml
+++ b/charts/portal/Chart.yaml
@@ -33,4 +33,4 @@ dependencies:
   - condition: postgresql.enabled
     name: postgresql
     repository: https://charts.bitnami.com/bitnami
-    version: 11.9.13
+    version: 12.12.x
