feat(apps)! : added delete and upload documentTypeIds
Ref : CPLP-3088

--- a/charts/portal/templates/deployment-backend-appmarketplace.yaml
+++ b/charts/portal/templates/deployment-backend-appmarketplace.yaml
@@ -176,6 +176,32 @@ spec:
           value: "{{ .Values.backend.appmarketplace.activeAppDocumentTypeIds.type2 }}"
         - name: "APPMARKETPLACE__ACTIVEAPPDOCUMENTTYPEIDS__3"
           value: "{{ .Values.backend.appmarketplace.activeAppDocumentTypeIds.type3 }}"
+        - name: "APPMARKETPLACE__DELETEACTIVEAPPDOCUMENTTYPEIDS__0"
+          value: "{{ .Values.backend.appmarketplace.deleteActiveAppDocumentTypeIds.type0 }}"
+        - name: "APPMARKETPLACE__DELETEACTIVEAPPDOCUMENTTYPEIDS__1"
+          value: "{{ .Values.backend.appmarketplace.deleteActiveAppDocumentTypeIds.type1 }}"
+        - name: "APPMARKETPLACE__DELETEACTIVEAPPDOCUMENTTYPEIDS__2"
+          value: "{{ .Values.backend.appmarketplace.deleteActiveAppDocumentTypeIds.type2 }}"
+        - name: "APPMARKETPLACE__DELETEACTIVEAPPDOCUMENTTYPEIDS__3"
+          value: "{{ .Values.backend.appmarketplace.deleteActiveAppDocumentTypeIds.type3 }}"
+        - name: "APPMARKETPLACE__UPLOADACTIVEAPPDOCUMENTTYPEIDS__0__DOCUMENTTYPEID"
+          value: "{{ .Values.backend.appmarketplace.uploadActiveAppDocumentTypeIds.documentTypeId0 }}"
+        - name: "APPMARKETPLACE__UPLOADACTIVEAPPDOCUMENTTYPEIDS__0__MEDIATYPES__0"
+          value: "{{ .Values.backend.appmarketplace.uploadActiveAppDocumentTypeIds.mediaTypeIds0.mediaTypeId0 }}"
+        - name: "APPMARKETPLACE__UPLOADACTIVEAPPDOCUMENTTYPEIDS__0__MEDIATYPES__1"
+          value: "{{ .Values.backend.appmarketplace.uploadActiveAppDocumentTypeIds.mediaTypeIds0.mediaTypeId1 }}"
+        - name: "APPMARKETPLACE__UPLOADACTIVEAPPDOCUMENTTYPEIDS__1__DOCUMENTTYPEID"
+          value: "{{ .Values.backend.appmarketplace.uploadActiveAppDocumentTypeIds.documentTypeId1 }}"
+        - name: "APPMARKETPLACE__UPLOADACTIVEAPPDOCUMENTTYPEIDS__1__MEDIATYPES__0"
+          value: "{{ .Values.backend.appmarketplace.uploadActiveAppDocumentTypeIds.mediaTypeIds1.mediaTypeId0 }}"
+        - name: "APPMARKETPLACE__UPLOADACTIVEAPPDOCUMENTTYPEIDS__2__DOCUMENTTYPEID"
+          value: "{{ .Values.backend.appmarketplace.uploadActiveAppDocumentTypeIds.documentTypeId2 }}"
+        - name: "APPMARKETPLACE__UPLOADACTIVEAPPDOCUMENTTYPEIDS__2__MEDIATYPES__0"
+          value: "{{ .Values.backend.appmarketplace.uploadActiveAppDocumentTypeIds.mediaTypeIds2.mediaTypeId0 }}"
+        - name: "APPMARKETPLACE__UPLOADACTIVEAPPDOCUMENTTYPEIDS__3__DOCUMENTTYPEID"
+          value: "{{ .Values.backend.appmarketplace.uploadActiveAppDocumentTypeIds.documentTypeId3 }}"
+        - name: "APPMARKETPLACE__UPLOADACTIVEAPPDOCUMENTTYPEIDS__3__MEDIATYPES__0"
+          value: "{{ .Values.backend.appmarketplace.uploadActiveAppDocumentTypeIds.mediaTypeIds3.mediaTypeId0 }}"
         - name: "APPMARKETPLACE__ITADMINROLES__0__CLIENTID"
           value: "{{ .Values.backend.clients.portal }}"
         - name: "APPMARKETPLACE__ITADMINROLES__0__USERROLENAMES__0"
