chore(localdev): disable helm test for push

--- a/.github/workflows/localdev-chart-test.yaml
+++ b/.github/workflows/localdev-chart-test.yaml
@@ -20,10 +20,10 @@
 name: LocalDev Lint and Test Chart
 
 on:
-  push:
-    paths:
-      - 'charts/localdev/**'
-    branches: [main, dev]
+  # push:
+  #   paths:
+  #     - 'charts/localdev/**'
+  #   branches: [main, dev]
   pull_request:
     paths:
       - 'charts/localdev/**'
