chore: disable helm test for push and PR

--- a/.github/workflows/localdev-chart-test.yaml
+++ b/.github/workflows/localdev-chart-test.yaml
@@ -24,9 +24,9 @@ on:
   #   paths:
   #     - 'charts/localdev/**'
   #   branches: [main, dev]
-  pull_request:
-    paths:
-      - 'charts/localdev/**'
+  # pull_request:
+  #   paths:
+  #     - 'charts/localdev/**'
   workflow_dispatch:
     inputs:
       node_image:
