docs(localdev): improve readme (#109)
improve readme
- add graph for 1rst login example
- add note for portal-migrations job failing until portal database is ready to take connections
- add option for /etc/hosts file under network setup
-re-add additional mac setup (wasn't part of readme tmpl the last and got lost)
disable helm test for push and PR as it sometimes runs successfully in 4 minutes and other times fails after 20 minutes, it's not reliable

--- a/.github/workflows/localdev-chart-test.yaml
+++ b/.github/workflows/localdev-chart-test.yaml
@@ -20,13 +20,13 @@
 name: LocalDev Lint and Test Chart
 
 on:
-  push:
-    paths:
-      - 'charts/localdev/**'
-    branches: [main, dev]
-  pull_request:
-    paths:
-      - 'charts/localdev/**'
+  # push:
+  #   paths:
+  #     - 'charts/localdev/**'
+  #   branches: [main, dev]
+  # pull_request:
+  #   paths:
+  #     - 'charts/localdev/**'
   workflow_dispatch:
     inputs:
       node_image:
