--- a/.github/workflows/portal-chart-test.yaml
+++ b/.github/workflows/portal-chart-test.yaml
@@ -56,6 +56,7 @@ jobs:
         with:
           version: v0.19.0
           node_image: ${{ github.event.inputs.node_image || 'kindest/node:v1.26.6' }}
+          memory: 8
 
       - name: Set up Helm
         uses: azure/setup-helm@v3
