--- a/.github/workflows/portal-chart-test.yaml
+++ b/.github/workflows/portal-chart-test.yaml
@@ -56,7 +56,6 @@ jobs:
         with:
           version: v0.19.0
           node_image: ${{ github.event.inputs.node_image || 'kindest/node:v1.26.6' }}
-          memory: 8
 
       - name: Set up Helm
         uses: azure/setup-helm@v3
@@ -88,7 +87,7 @@ jobs:
         run: |
           helm repo add bitnami https://charts.bitnami.com/bitnami
           helm repo add tractusx-dev https://eclipse-tractusx.github.io/charts/dev
-          helm install portal charts/portal --namespace install --create-namespace
+          helm install portal charts/portal --namespace install --create-namespace --timeout 10m
         if: github.event_name != 'pull_request' || steps.list-changed.outputs.changed == 'true'
 
         # Upgrade the released portal chart version with the locally available chart
