chore(portal): update argo app templates

--- a/consortia/argocd-app-templates/appsetup-dev.yaml
+++ b/consortia/argocd-app-templates/appsetup-dev.yaml
@@ -20,10 +20,10 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: portal
+  name: portal-upgrade
 spec:
   destination:
-    namespace: product-portal
+    namespace: product-iam
     server: 'https://kubernetes.default.svc'
   source:
     path: charts/portal
