--- a/consortia/argocd-app-templates/appsetup-upgrade.yaml
+++ b/consortia/argocd-app-templates/appsetup-upgrade.yaml
@@ -20,15 +20,15 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: portal-upgrade
+  name: portal
 spec:
   destination:
-    namespace: product-iam
+    namespace: product-portal
     server: 'https://kubernetes.default.svc'
   source:
     path: charts/portal
     repoURL: 'https://github.com/eclipse-tractusx/portal-cd.git'
-    targetRevision: chore/upgrade-postgres-subchart
+    targetRevision: upgrade
     plugin:
       env:
         - name: AVP_SECRET
